--- a/data/ui/settings.glade
+++ b/data/ui/settings.glade
@@ -424,6 +424,31 @@
                               </packing>
                             </child>
                             <child>
+                              <object class="GtkButton" id="crt_file_reset">
+                                <property name="visible">True</property>
+                                <property name="can-focus">True</property>
+                                <property name="receives-default">True</property>
+                                <property name="halign">center</property>
+                                <property name="valign">center</property>
+                                <property name="margin-top">4</property>
+                                <signal name="clicked" handler="on_crt_file_reset_clicked" swapped="no"/>
+                                <child>
+                                  <object class="GtkImage">
+                                    <property name="visible">True</property>
+                                    <property name="can-focus">False</property>
+                                    <property name="icon-name">edit-clear</property>
+                                  </object>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">True</property>
+                                <property name="padding">5</property>
+                                <property name="pack-type">end</property>
+                                <property name="position">1</property>
+                              </packing>
+                            </child>
+                            <child>
                               <object class="GtkFileChooserButton" id="crt_chooser">
                                 <property name="visible">True</property>
                                 <property name="can-focus">False</property>
@@ -434,8 +459,9 @@
                               </object>
                               <packing>
                                 <property name="expand">True</property>
-                                <property name="fill">False</property>
-                                <property name="position">1</property>
+                                <property name="fill">True</property>
+                                <property name="pack-type">end</property>
+                                <property name="position">2</property>
                               </packing>
                             </child>
                           </object>
