--- a/data/ui/settings.glade
+++ b/data/ui/settings.glade
@@ -99,7 +99,7 @@
                                       <object class="GtkImage">
                                         <property name="visible">True</property>
                                         <property name="can-focus">False</property>
-                                        <property name="icon-name">dialog-close</property>
+                                        <property name="icon-name">window-close-symbolic</property>
                                       </object>
                                     </child>
                                   </object>
