support to open ovpn files directly

--- a/data/ui/settings.glade
+++ b/data/ui/settings.glade
@@ -378,7 +378,7 @@
                                   <object class="GtkImage">
                                     <property name="visible">True</property>
                                     <property name="can-focus">False</property>
-                                    <property name="icon-name">edit-clear</property>
+                                    <property name="icon-name">edit-clear-symbolic</property>
                                   </object>
                                 </child>
                               </object>
