UI/UX changes: set icon on notification
- fix padding in main window

--- a/data/ui/main.glade
+++ b/data/ui/main.glade
@@ -237,6 +237,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
+                <property name="padding">4</property>
                 <property name="position">1</property>
               </packing>
             </child>
@@ -306,6 +307,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
+                <property name="padding">2</property>
                 <property name="position">3</property>
               </packing>
             </child>
