UI changes: remember GtkPaned Position
- Remember and restore GtkPaned position (using Gsettings)
- Use Icons instead of text for authentication box in settings window.

--- a/data/ui/main.glade
+++ b/data/ui/main.glade
@@ -184,6 +184,7 @@
     <property name="default-width">600</property>
     <property name="default-height">800</property>
     <property name="startup-id">com.github.jkotra.eovpn</property>
+    <signal name="destroy" handler="on_mainwindow_destroy" swapped="no"/>
     <child>
       <object class="GtkBox" id="main_box">
         <property name="visible">True</property>
@@ -436,7 +437,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkPaned">
+          <object class="GtkPaned" id="main_paned">
             <property name="visible">True</property>
             <property name="can-focus">True</property>
             <property name="orientation">vertical</property>
