--- a/data/ui/settings.glade
+++ b/data/ui/settings.glade
@@ -227,14 +227,15 @@
                                             <property name="visible">True</property>
                                             <property name="can-focus">False</property>
                                             <child>
-                                              <object class="GtkLabel">
+                                              <object class="GtkImage">
                                                 <property name="visible">True</property>
                                                 <property name="can-focus">False</property>
-                                                <property name="margin-bottom">4</property>
-                                                <property name="label" translatable="yes">Username:</property>
+                                                <property name="tooltip-text" translatable="yes">User ID</property>
+                                                <property name="icon-name">avatar-default-symbolic</property>
+                                                <property name="icon_size">6</property>
                                               </object>
                                               <packing>
-                                                <property name="expand">True</property>
+                                                <property name="expand">False</property>
                                                 <property name="fill">True</property>
                                                 <property name="padding">2</property>
                                                 <property name="position">0</property>
@@ -266,15 +267,17 @@
                                             <property name="visible">True</property>
                                             <property name="can-focus">False</property>
                                             <child>
-                                              <object class="GtkLabel">
+                                              <object class="GtkImage">
                                                 <property name="visible">True</property>
                                                 <property name="can-focus">False</property>
-                                                <property name="label" translatable="yes">Password:</property>
+                                                <property name="tooltip-text" translatable="yes">Password</property>
+                                                <property name="icon-name">dialog-password-symbolic</property>
+                                                <property name="icon_size">6</property>
                                               </object>
                                               <packing>
-                                                <property name="expand">True</property>
+                                                <property name="expand">False</property>
                                                 <property name="fill">True</property>
-                                                <property name="padding">4</property>
+                                                <property name="padding">2</property>
                                                 <property name="position">0</property>
                                               </packing>
                                             </child>
@@ -344,6 +347,7 @@
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">True</property>
+                            <property name="padding">12</property>
                             <property name="position">0</property>
                           </packing>
                         </child>
@@ -410,7 +414,7 @@
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">True</property>
-                            <property name="padding">4</property>
+                            <property name="padding">12</property>
                             <property name="position">2</property>
                           </packing>
                         </child>
