--- a/data/ui/settings.glade
+++ b/data/ui/settings.glade
@@ -156,10 +156,6 @@
                             <property name="visible">True</property>
                             <property name="can-focus">True</property>
                             <property name="receives-default">True</property>
-                            <property name="halign">center</property>
-                            <property name="valign">center</property>
-                            <property name="margin-end">4</property>
-                            <property name="margin-bottom">6</property>
                             <signal name="clicked" handler="on_settings_validate_btn_clicked" object="openvpn_config_remote_addr" swapped="no"/>
                           </object>
                           <packing>
@@ -227,17 +223,25 @@
                                             <property name="visible">True</property>
                                             <property name="can-focus">False</property>
                                             <child>
-                                              <object class="GtkImage">
+                                              <object class="GtkButton">
                                                 <property name="visible">True</property>
-                                                <property name="can-focus">False</property>
-                                                <property name="tooltip-text" translatable="yes">User ID</property>
-                                                <property name="icon-name">avatar-default-symbolic</property>
-                                                <property name="icon_size">6</property>
+                                                <property name="sensitive">False</property>
+                                                <property name="can-focus">True</property>
+                                                <property name="receives-default">True</property>
+                                                <property name="tooltip-text" translatable="yes">Username</property>
+                                                <property name="halign">center</property>
+                                                <property name="valign">center</property>
+                                                <child>
+                                                  <object class="GtkImage">
+                                                    <property name="visible">True</property>
+                                                    <property name="can-focus">False</property>
+                                                    <property name="icon-name">avatar-default-symbolic</property>
+                                                  </object>
+                                                </child>
                                               </object>
                                               <packing>
                                                 <property name="expand">False</property>
                                                 <property name="fill">True</property>
-                                                <property name="padding">2</property>
                                                 <property name="position">0</property>
                                               </packing>
                                             </child>
@@ -246,7 +250,6 @@
                                                 <property name="visible">True</property>
                                                 <property name="can-focus">True</property>
                                                 <property name="margin-end">4</property>
-                                                <property name="margin-bottom">4</property>
                                                 <signal name="changed" handler="save_btn_activate" swapped="no"/>
                                               </object>
                                               <packing>
@@ -255,6 +258,9 @@
                                                 <property name="position">1</property>
                                               </packing>
                                             </child>
+                                            <style>
+                                              <class name="linked"/>
+                                            </style>
                                           </object>
                                           <packing>
                                             <property name="expand">False</property>
@@ -267,17 +273,25 @@
                                             <property name="visible">True</property>
                                             <property name="can-focus">False</property>
                                             <child>
-                                              <object class="GtkImage">
+                                              <object class="GtkButton">
                                                 <property name="visible">True</property>
-                                                <property name="can-focus">False</property>
+                                                <property name="sensitive">False</property>
+                                                <property name="can-focus">True</property>
+                                                <property name="receives-default">True</property>
                                                 <property name="tooltip-text" translatable="yes">Password</property>
-                                                <property name="icon-name">dialog-password-symbolic</property>
-                                                <property name="icon_size">6</property>
+                                                <property name="halign">center</property>
+                                                <property name="valign">center</property>
+                                                <child>
+                                                  <object class="GtkImage">
+                                                    <property name="visible">True</property>
+                                                    <property name="can-focus">False</property>
+                                                    <property name="icon-name">dialog-password-symbolic</property>
+                                                  </object>
+                                                </child>
                                               </object>
                                               <packing>
                                                 <property name="expand">False</property>
                                                 <property name="fill">True</property>
-                                                <property name="padding">2</property>
                                                 <property name="position">0</property>
                                               </packing>
                                             </child>
@@ -297,10 +311,14 @@
                                                 <property name="position">1</property>
                                               </packing>
                                             </child>
+                                            <style>
+                                              <class name="linked"/>
+                                            </style>
                                           </object>
                                           <packing>
                                             <property name="expand">False</property>
                                             <property name="fill">True</property>
+                                            <property name="padding">6</property>
                                             <property name="position">1</property>
                                           </packing>
                                         </child>
@@ -375,7 +393,6 @@
                                 <property name="can-focus">True</property>
                                 <property name="receives-default">True</property>
                                 <property name="halign">center</property>
-                                <property name="valign">center</property>
                                 <property name="margin-top">4</property>
                                 <signal name="clicked" handler="on_crt_file_reset_clicked" swapped="no"/>
                                 <child>
@@ -389,7 +406,7 @@
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">True</property>
-                                <property name="padding">5</property>
+                                <property name="padding">6</property>
                                 <property name="pack-type">end</property>
                                 <property name="position">1</property>
                               </packing>
