--- a/data/ui/settings.glade
+++ b/data/ui/settings.glade
@@ -464,6 +464,8 @@
                   <object class="GtkAspectFrame">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
+                    <property name="margin-start">20</property>
+                    <property name="margin-end">20</property>
                     <property name="label-xalign">0</property>
                     <property name="shadow-type">in</property>
                     <child>
@@ -700,7 +702,7 @@
                     </child>
                   </object>
                   <packing>
-                    <property name="expand">False</property>
+                    <property name="expand">True</property>
                     <property name="fill">True</property>
                     <property name="padding">12</property>
                     <property name="position">0</property>
