multiple backends to iplookup

--- a/data/ui/about.glade
+++ b/data/ui/about.glade
@@ -12,8 +12,7 @@
     <property name="comments" translatable="yes">OpenVPN Configuration(s) Manager</property>
     <property name="website">https://github.com/jkotra/eOVPN</property>
     <property name="authors">Jagadeesh Kotra</property>
-    <property name="artists">OpenVPN
-Kiranshastry (Notification Icons)</property>
+    <property name="artists">OpenVPN</property>
     <property name="logo-icon-name">image-missing</property>
     <property name="license-type">gpl-3-0</property>
     <signal name="delete-event" handler="on_about_dlg_delete_event" after="yes" swapped="no"/>
